--- a/HelloFlask/HelloFlask/templates/board.html
+++ b/HelloFlask/HelloFlask/templates/board.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>코인 TF</title>
-    <link rel="stylesheet" type="text/css" href="./content/main.css">
+    <link rel="stylesheet" type="text/css" href="/static/content/main.css">
     <link rel>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400%7COswald:300,400%7CRaleway:400,700" rel="stylesheet">
-    <link rel="shortcut icon" href="./images/favicon.png">
+    <link rel="shortcut icon" href="/static/images/favicon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
-    <script type="text/javascript" src="./js/boards.js"></script>
+    <script type="text/javascript" src="/static/js/boards.js"></script>
     <script src="https://cdn.ckeditor.com/4.6.2/basic/ckeditor.js"></script>
   </head>
   <body>
