--- a/HelloFlask/HelloFlask/templates/board.html
+++ b/HelloFlask/HelloFlask/templates/board.html
@@ -4,21 +4,76 @@
     <meta charset="utf-8">
     <title>코인 TF</title>
     <link rel="stylesheet" type="text/css" href="/static/content/main.css">
-    <link rel>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400%7COswald:300,400%7CRaleway:400,700" rel="stylesheet">
     <link rel="shortcut icon" href="/static/images/favicon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_green-light_blue.min.css">
+    
+    
     <script type="text/javascript" src="/static/js/boards.js"></script>
     <script src="https://cdn.ckeditor.com/4.6.2/basic/ckeditor.js"></script>
   </head>
   <body>
-    <div class="head">
-    </div>
-    <div class="main">
-      <p>hi</p>
-      <textarea name="editor01"></textarea>
-      <script>CKEDITOR.replace("editor01")</script>
+    <div class="mdl-layout__container">
+      <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+        <!-- 헤더-->
+        <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
+          <div class="mdl-layout__header-row">
+            <!-- home--><a href="index.html" class="mdl-navigation__link">
+              <button class="mdl-layout-title mdl-button">Home</button></a>
+            <!-- 알림 --><span style="cursor: pointer;" id="noti-inbox">Inbox</span>
+            <ul for="noti-inbox" class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-left">
+              <li class="mdl-menu__item">Read</li>
+              <li class="mdl-menu__item">Delete</li>
+              <li class="mdl-menu__item">Popup</li>
+            </ul>
+            
+            <div class="mdl-layout-spacer"></div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+              <label for="header-search" id="header-search-menu" class="mdl-button mdl-js-button mdl-button--icon"><i class="material-icons">search</i></label>
+              <div for="header-search-menu" class="mdl-tooltip">searching</div>
+              <div class="mdl-textfield__expandable-holder">
+                <input type="text" id="header-search" class="mdl-textfield__input">
+                <label for="header-search" class="mdl-textfield__label">Enter your query...</label>
+              </div>
+            </div>
+            <button id="header-redeem" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"><i class="mdl-color-text--blue-grey-400 material-icons">local_offer</i></button>
+            <div for="header-redeem" class="mdl-tooltip">redeem</div>
+            <button id="header-build" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"><i class="material-icons mdl-color-text--blue-grey-600">forum</i></button>
+            <div for="header-build" class="mdl-tooltip">fail action need fix</div>
+            <button id="header-abouts" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"><i class="material-icons">more_vert</i></button>
+            <ul for="header-abouts" class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right">
+              <li class="mdl-menu__item">About</li>
+              <li class="mdl-menu__item">Contact</li>
+              <li class="mdl-menu__item">information</li>
+            </ul>
+          </div>
+        </header>
+        <div class="demo-drawer mdl-layout__drawer">
+          <header id="navtop" class="demo-drawer-header"><img src="/static/images/user.jpg" class="demo-avatar">
+            <div class="demo-avatar-dropdown"><span>hello@example.com</span>
+              <div class="mdl-layout-spacer"></div>
+              <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"><i role="presentation" class="material-icons">arrow_drop_down</i><span class="visuallyhidden">Accounts</span></button>
+              <ul for="accbtn" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect">
+                <li class="mdl-menu__item">hello@example.com</li>
+                <li class="mdl-menu__item">info@example.com</li>
+                <li class="mdl-menu__item"><i class="material-icons">add</i>
+                  <Add>another account...</Add>
+                </li>
+              </ul>
+            </div>
+          </header>
+          <nav id="navbottom" class="demo-navigation mdl-navigation"><a href="" class="mdl-navigation__link">Home</a><a href="" class="mdl-navigation__link">Inbox</a><a href="" class="mdl-navigation__link">Trash</a><a href="" class="mdl-navigation__link"><i role="presentation" class="mdl-color-text--blue-grey-700 material-icons">help_outline</i><span>Help</span>
+              <!--span.visuallyhidden Help-->
+              </a>
+          </nav>
+        </div>
+        <div class="main">
+          <p>hi</p>
+          <textarea name="editor01"></textarea>
+          <script>CKEDITOR.replace("editor01")</script>
+        </div>
+      </div>
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
