--- a/HelloFlask/HelloFlask/templates/index.html
+++ b/HelloFlask/HelloFlask/templates/index.html
@@ -2,6 +2,7 @@
 <html class="mdl-js">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>코인 TF 냐하하</title>
     <link rel="stylesheet" type="text/css" href="/static/content/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400%7COswald:300,400%7CRaleway:400,700" rel="stylesheet">
